--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -69,6 +69,22 @@ h6 {
   margin-bottom: 0.5em;
 }
 
+img[alt$=">"] {
+  float: right;
+}
+
+img[alt$="<"] {
+  float: left;
+}
+
+img[alt$="><"] {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: auto;
+  float: none!important;
+}
+
 pre {
   background: var(--lightGrey);
   line-height: 1.45;
