--- a/src/components/globalStyles.css
+++ b/src/components/globalStyles.css
@@ -69,15 +69,15 @@ h6 {
   margin-bottom: 0.5em;
 }
 
-img[alt$=">"] {
+img[src*='#right'] {
   float: right;
 }
 
-img[alt$="<"] {
+img[src*='#left'] {
   float: left;
 }
 
-img[alt$="><"] {
+img[src*='#center'] {
   display: block;
   max-width: 100%;
   height: auto;
